收口 Forge 1.12.2 首个公开 Beta / Finalize the first public Forge 1.12.2 beta
完成主线功能的 1.12.2 全量回移，收口远程 GUI、远距离挖掘掉落、容器 Overlay、JEI 填充、旧版渲染与输入兼容，并补齐 Java 8、Mixin 正式映射、整合包探针和回归测试门禁。内部抢滩与日志设计文档继续仅保留在本地。

Complete the broad 1.12.2 backport with remote-menu, far-mining drop, container-overlay, JEI transfer, legacy rendering, and input compatibility. Add Java 8, production Mixin mapping, modpack probe, and regression gates while keeping internal porting notes local-only.