@@ -38,7 +38,7 @@ class RtsRightClickPriorityRoutingTest {
                 "普通物品的交互优先仍必须只作用于单方块模式。");
         int normalInteractGuardEnd = body.indexOf(") {", normalInteractGuard);
         assertTrue(body.substring(normalInteractGuard, normalInteractGuardEnd)
-                        .contains("this.controller.getPlacementStatePreset().isBlank()"),
+                        .contains("this.controller.getPlacementStatePreset().trim().isEmpty()"),
                 "R 已预选 BlockState 时必须绕过自然交互，否则 preset 根本不会进入放置数据包");
         assertTrue(interactPinnedItem > normalInteractGuard,
                 "normal right-click with a selected storage item should send interact before placement");
@@ -91,7 +91,7 @@ class RtsRightClickPriorityRoutingTest {
         assertTrue(forceGuard >= 0, "main-hand block action must keep the Shift force-place branch");
         int forceGuardEnd = body.indexOf(") {", forceGuard);
         assertTrue(body.substring(forceGuard, forceGuardEnd)
-                        .contains("this.controller.getPlacementStatePreset().isBlank()"),
+                        .contains("!this.controller.getPlacementStatePreset().trim().isEmpty()"),
                 "手持方块的 R preset 也必须让右键走放置包，而不是不携带 preset 的自然交互包");
         assertTrue(shiftPlace > forceGuard,
                 "Shift right-click should run placeSelected before the normal interaction fallback");
