@@ -2,6 +2,7 @@ package com.rtsbuilding.rtsbuilding.client.compat;
 
 import org.junit.jupiter.api.Test;
 
+import java.io.File;
 import java.nio.file.Path;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -16,7 +17,7 @@ class RtsIntroReminderScopeTest {
 
     @Test
     void singleplayerScopeUsesNormalizedWorldDirectory() {
-        Path root = java.nio.file.Paths.get("E:", "Minecraft", "saves", "Demo", "..", "Demo");
+        Path root = Path.of("build", "client-smoke", "saves", "Demo", "..", "Demo");
 
         assertEquals(
                 RtsIntroReminderScope.singleplayerKey(root.normalize()),
@@ -26,13 +27,33 @@ class RtsIntroReminderScopeTest {
     @Test
     void differentWorldDirectoriesRemainIndependent() {
         assertNotEquals(
-                RtsIntroReminderScope.singleplayerKey(java.nio.file.Paths.get("E:", "Minecraft", "saves", "World-A")),
-                RtsIntroReminderScope.singleplayerKey(java.nio.file.Paths.get("E:", "Minecraft", "saves", "World-B")));
+                RtsIntroReminderScope.singleplayerKey(Path.of("build", "saves", "World-A")),
+                RtsIntroReminderScope.singleplayerKey(Path.of("build", "saves", "World-B")));
     }
 
     @Test
     void unstableScopeDoesNotCreateGlobalFallbackKey() {
         assertEquals("", RtsIntroReminderScope.serverKey(" "));
         assertEquals("", RtsIntroReminderScope.singleplayerKey(null));
+    }
+
+    @Test
+    void integratedServerFolderBuildsStableWorldKeyWithoutClientSaveHandler() {
+        Path gameDirectory = Path.of("build", "client-smoke");
+
+        assertEquals(
+                RtsIntroReminderScope.singleplayerKey(gameDirectory.resolve("saves").resolve("New World")),
+                RtsIntroReminderScope.singleplayerKey(gameDirectory, "New World"));
+    }
+
+    @Test
+    void unavailableOrEscapingIntegratedServerFolderDefersReminder() {
+        Path gameDirectory = Path.of("build", "client-smoke");
+
+        assertEquals("", RtsIntroReminderScope.singleplayerKey(null, "New World"));
+        assertEquals("", RtsIntroReminderScope.singleplayerKey(gameDirectory, null));
+        assertEquals("", RtsIntroReminderScope.singleplayerKey(gameDirectory, "  "));
+        assertEquals("", RtsIntroReminderScope.singleplayerKey(
+                gameDirectory, ".." + File.separator + "outside"));
     }
 }
